Bug 78563 - AI: Large gap in Fire Fox between "How can I help?" and chat.

--- a/packages/shared/components/chat/components/chat-message-body/ChatMessageBody.module.scss
+++ b/packages/shared/components/chat/components/chat-message-body/ChatMessageBody.module.scss
@@ -45,6 +45,7 @@
 
   &.empty {
     max-height: fit-content;
+    flex-grow: 0;
   }
 
   @include mixins.tablet-and-below {
